# cpp-boilerplate

./: CMakeLists.txt  README.md
.cache/clangd/index/: Config.h.A3376FC88263C7C6.idx  main.cpp.D023C9395E86A6F6.idx
include/: Config.h
src/: main.cpp
